--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>2024 Election Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="icon.jfif" type="image/x-icon">
 </head>
 
 <body>
