--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5895GY25WQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5895GY25WQ');
+    </script>
     <title>2024 Election Tracker</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="icon.jfif" type="image/x-icon">
