Changed some wording

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
         gtag('config', 'G-5895GY25WQ');
     </script>
-    <title>2024 Election Tracker</title>
+    <title>2024 Election Results</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="icon.jfif" type="image/x-icon">
 </head>
 
 <body>
-    <h1>2024 Presidential Election Live Tracker</h1>
+    <h1>2024 Presidential Election Live Results</h1>
 
     <div id="scoreboard">
         <svg id="demPortrait" class="candidatePicture">
